--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -60,9 +60,9 @@
 								<span ng-show="shipmentForm.city.$error.required">City is required.</span>
 							</div>
 							<div class="col col-50">
-								<input type="text" name="code" ng-model="shipmentInfo.codes" placeholder="Postal Code" required>
-								<span class="assertive font-small" ng-show="shipmentForm.code.$dirty && shipmentForm.code.$invalid">
-								<span ng-show="shipmentForm.code.$error.required">Postal code is required.</span>
+								<input type="text" name="postcode" ng-model="shipmentInfo.postcode" placeholder="Postal postcode" required>
+								<span class="assertive font-small" ng-show="shipmentForm.postcode.$dirty && shipmentForm.postcode.$invalid">
+								<span ng-show="shipmentForm.postcode.$error.required">Postal postcode is required.</span>
 							</div>
 						</div>
 						<div class="row">
