--- a/www/templates/categories.html
+++ b/www/templates/categories.html
@@ -6,7 +6,7 @@
     	<a class="col col-50" ng-if="$index < productTypeList.length" 
     	ng-href="#/app/product/list/{{productTypeList[$index].code}}" style="cursor: pointer">
 		  	<div class="sbox center">
-			  	<img ng-src="{{img}}{{productTypeList[$index].photo}}" width="100%">
+			  	<img ng-src="{{productTypeList[$index].photo}}" width="100%">
 			  	<p>
 			  		{{productTypeList[$index].name}}
 			  		<span class="badge badge-assertive">{{productTypeList[$index].type_count}}</span>
@@ -17,7 +17,7 @@
 	  	<a class="col col-50" ng-show="productTypeList[$index+1] != null" ng-if="$index < productTypeList.length" 
 	  	ng-href="#/app/product/list/{{productTypeList[$index+1].code}}" style="cursor: pointer">
 		  	<div class="sbox center">
-			  	<img ng-src="{{img}}{{productTypeList[$index+1].photo}}" width="100%">
+			  	<img ng-src="{{productTypeList[$index+1].photo}}" width="100%">
 			  	<p>
 			  		{{productTypeList[$index+1].name}}
 			  		<span class="badge badge-assertive">{{productTypeList[$index+1].type_count}}</span>
