--- a/www/templates/order.summary.html
+++ b/www/templates/order.summary.html
@@ -23,7 +23,7 @@
 		<div class="col col-50 font-medium" style="color:#3498DB;">{{SalesInfo.sub_total}}</div>
     </div>
 
-   	<form ng-submit="invoice(salesorderList)"> 
+   	<form ng-submit="invoice(salesinfo)"> 
 		  
 		<!-- Row for total  -->
 		<div class="row text-right">
