--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -4,36 +4,32 @@
 	<div class="container-fluid">
 		<!-- First row for search -->
 		<div class="row">
-			<div class="col col-100">
-				<!-- Search -->
-				<div class="list">
-					<label class="item item-input">
-						<i class="icon ion-search placeholder-icon"></i>
-						<input type="text" placeholder="Search" ng-model="query">
-					</label>
-				</div>		
-			</div>	
+			<div class="col b1">
+			<!-- Search -->
+				<form ng-submit="searchform(search)">
+					<input type="text" ng-model="keyword" placeholder="Search" class="pull-left" width="100%">
+					<button type="submit" class="pull-right"><i class="icon ion-search placeholder-icon"></i></button>
+				</form>
+			</div>
 		</div>
 		<!-- New row for listing -->
 		<div class="row">
 			<div class="col col-100">
 				<ul class="list">
 				    <!-- <li class="item" ng-repeat="productInfo in productList | filter:query"> -->
-				    
-				      	<div class="row" ng-repeat="productInfo in productList|filter:query" ng-if="$index % 2 == 0">
-
-					    	<a class="col col-50" ng-if="$index < productList.length" 
+				      	<div class="row" ng-repeat="productInfo in productList" ng-if="$index % 2 == 0">
+					    	<a class="col col-50" ng-show="productList[$index] != null" ng-if="$index < productList.length" 
 					    	ng-href="#/app/product/details/{{productList[$index].sku_code}}">
 							  	<div class="sbox center">
-								  	<img ng-src="{{img}}{{productList[$index].photo}}" width="100%">
+								  	<img ng-src="{{img}}{{productList[$index].photo}}" height="160px" width="100%">
 								  	<p class="ellipsis p10">{{productList[$index].name}}</p>
 								  	<p class="default-bg p10">MYR {{productList[$index].price}}</p>
 							  	</div>
 						  	</a>
-						  	<a class="col col-50" ng-if="$index < productList.length" 
+						  	<a class="col col-50" ng-show="productList[$index+1] != null" ng-if="$index < productList.length" 
 						  	ng-href="#/app/product/details/{{productList[$index+1].sku_code}}">
 							  	<div class="sbox center">
-								  	<img ng-src="{{img}}{{productList[$index+1].photo}}" width="100%">
+								  	<img ng-src="{{img}}{{productList[$index+1].photo}}" height="160px" width="100%">
 								  	<p class="ellipsis p10">{{productList[$index+1].name}}</p>
 								  	<p class="default-bg p10">MYR {{productList[$index+1].price}}</p>
 							  	</div>
